--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ input {
     vertical-align: middle;
     border-radius: 5px;
     border-width: 1px;
-    border-color:lightgray;
+    border-color:rgb(233, 233, 233);
     border-style: solid;
 }
 
@@ -50,10 +50,8 @@ a:link {
 
 .bannerHolder{
     display: block;
-    margin-inline: auto;
     margin-top: 40px;
     margin-bottom: 40px;
-    min-width: 600px;
     text-align: center;
 }
 
@@ -62,6 +60,7 @@ a:link {
     width: 15%;
     text-align: end;
 }
+
 .iconButtonTextHolder{
     display: inline-block;
     width: 85%;
@@ -79,7 +78,6 @@ a:link {
     text-align: center;
     margin-top: 15px;
     margin-bottom: 15px;
-    padding: 0px;
 }
 
 .hrWithTextFragment{
@@ -104,8 +102,6 @@ a:link {
     display: inline-block;
     width: 50%;
     max-height: 100%;
-    margin:0px;
-    padding:0px;
 }
 
 .registrationSheet, .hrWithText, .registrationForm {
@@ -114,7 +110,6 @@ a:link {
 
 .regButton{
     background-color: white;
-    text-align: start;
 }
 
 .formRegisterButton{
@@ -139,28 +134,30 @@ a:link {
 #mainContent {
     margin:auto;
     display:block;
-    width: 600px;
-    /* height: 550px; */
     box-shadow: 0px 0px 7px rgba(100, 96, 106, 0.2);
     border-style: solid;
     border-radius: 10px;
     border-width: 1px;
-    padding: 0px;
 }
 
 #imageMainContent{
-    /* height: 510px; */
     width: 100%;
     object-fit: cover;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    margin:0px;
-    padding: 0px;
+    /* margin:0px;
+    padding: 0px; */
 }
 
 #signIn{
     vertical-align: middle;
     font-size: 10px;
+}
+
+.bannerHolder, #mainContent{
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #mainContent, #imageMainContent{
